sidor för låtar adderade
dddd

--- a/famitracker_45.html
+++ b/famitracker_45.html
@@ -20,95 +20,95 @@ Tracks: 45
 
 <br><br>
 
-1 Pony Backpack<br><audio controls><source src="music/1.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="1.html">1 Pony Backpack</a><br><audio controls><source src="music/1.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-2 Aspire<br><audio controls><source src="music/2.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="2.html">2 Aspire</a><br><audio controls><source src="music/2.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-3 03<br><audio controls><source src="music/3.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="3.html">3 03</a><br><audio controls><source src="music/3.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-4 Makes Sense<br><audio controls><source src="music/4.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="4.html">4 Makes Sense</a><br><audio controls><source src="music/4.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-5 I'm Stingy And I'm Your Biggest Fan<br><audio controls><source src="music/5.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="5.html">5 I'm Stingy And I'm Your Biggest Fan</a><br><audio controls><source src="music/5.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-6 Chord Entangler<br><audio controls><source src="music/6.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="6.html">6 Chord Entangler</a><br><audio controls><source src="music/6.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-7 Castle<br><audio controls><source src="music/7.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="7.html">7 Castle</a><br><audio controls><source src="music/7.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-8 Dative Esque Transition<br><audio controls><source src="music/8.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="8.html">8 Dative Esque Transition</a><br><audio controls><source src="music/8.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-9 Placeholder Shortened<br><audio controls><source src="music/9.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="9.html">9 Placeholder Shortened</a><br><audio controls><source src="music/9.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-10 Hidden Book<br><audio controls><source src="music/10.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="10.html">10 Hidden Book</a><br><audio controls><source src="music/10.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-11 Striking<br><audio controls><source src="music/11.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="11.html">11 Striking</a><br><audio controls><source src="music/11.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-12 Bergdagg<br><audio controls><source src="music/12.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="12.html">12 Bergdagg</a><br><audio controls><source src="music/12.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-13 Rapid Gray<br><audio controls><source src="music/13.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="13.html">13 Rapid Gray</a><br><audio controls><source src="music/13.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-14 Irresolute<br><audio controls><source src="music/14.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="14.html">14 Irresolute</a><br><audio controls><source src="music/14.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-15 Intrinsic<br><audio controls><source src="music/15.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="15.html">15 Intrinsic</a><br><audio controls><source src="music/15.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-16 own1<br><audio controls><source src="music/16.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="16.html">16 own1</a><br><audio controls><source src="music/16.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-17 own2<br><audio controls><source src="music/17.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="17.html">17 own2</a><br><audio controls><source src="music/17.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-18 own3<br><audio controls><source src="music/18.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="18.html">18 own3</a><br><audio controls><source src="music/18.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-19 copper<br><audio controls><source src="music/19.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="19.html">19 copper</a><br><audio controls><source src="music/19.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-20 terrarium<br><audio controls><source src="music/20.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="20.html">20 terrarium</a><br><audio controls><source src="music/20.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-21 tenuous<br><audio controls><source src="music/21.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="21.html">21 tenuous</a><br><audio controls><source src="music/21.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-22 fair<br><audio controls><source src="music/22.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="22.html">22 fair</a><br><audio controls><source src="music/22.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-23 tangy<br><audio controls><source src="music/23.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="23.html">23 tangy</a><br><audio controls><source src="music/23.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-24 heady<br><audio controls><source src="music/24.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="24.html">24 heady</a><br><audio controls><source src="music/24.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-25 jafar<br><audio controls><source src="music/25.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="25.html">25 jafar</a><br><audio controls><source src="music/25.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-26 clove hunt<br><audio controls><source src="music/26.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="26.html">26 clove hunt</a><br><audio controls><source src="music/26.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-27 afterthought dirt<br><audio controls><source src="music/27.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="27.html">27 afterthought dirt</a><br><audio controls><source src="music/27.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-28 branch tax<br><audio controls><source src="music/28.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="28.html">28 branch tax</a><br><audio controls><source src="music/28.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-29 mellow moor<br><audio controls><source src="music/29.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="29.html">29 mellow moor</a><br><audio controls><source src="music/29.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-30 seventh cherry for the stew<br><audio controls><source src="music/30.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="30.html">30 seventh cherry for the stew</a><br><audio controls><source src="music/30.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-31 penitent twist<br><audio controls><source src="music/31.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="31.html">31 penitent twist</a><br><audio controls><source src="music/31.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-32 My canvas was transported<br><audio controls><source src="music/32.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="32.html">32 My canvas was transported</a><br><audio controls><source src="music/32.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-33 public coil<br><audio controls><source src="music/33.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="33.html">33 public coil</a><br><audio controls><source src="music/33.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-34 Door_<br><audio controls><source src="music/34.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="34.html">34 Door_</a><br><audio controls><source src="music/34.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-35 Binary_<br><audio controls><source src="music/35.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="35.html">35 Binary_</a><br><audio controls><source src="music/35.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-36 DracoNIan IcoN<br><audio controls><source src="music/36.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="36.html">36 DracoNIan IcoN</a><br><audio controls><source src="music/36.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-37 fastened in frame<br><audio controls><source src="music/37.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="37.html">37 fastened in frame</a><br><audio controls><source src="music/37.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-38 WOOL PRESS<br><audio controls><source src="music/38.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="38.html">38 WOOL PRESS</a><br><audio controls><source src="music/38.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-39 Moss_<br><audio controls><source src="music/39.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="39.html">39 Moss_</a><br><audio controls><source src="music/39.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-40 J2<br><audio controls><source src="music/40.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="40.html">40 J2</a><br><audio controls><source src="music/40.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-41 Tracheophyte<br><audio controls><source src="music/41.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="41.html">41 Tracheophyte</a><br><audio controls><source src="music/41.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-42 Chaupar<br><audio controls><source src="music/42.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="42.html">42 Chaupar</a><br><audio controls><source src="music/42.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-43 Cactus<br><audio controls><source src="music/43.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="43.html">43 Cactus</a><br><audio controls><source src="music/43.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-44 Ivrit<br><audio controls><source src="music/44.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="44.html">44 Ivrit</a><br><audio controls><source src="music/44.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-45 Four Chambers<br><audio controls><source src="music/45.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="45.html">45 Four Chambers</a><br><audio controls><source src="music/45.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
