youtube channel liunk
yeah baby yeah

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 AANICKFAN
 </title>
 <link rel="icon" href="images/icon.png">
+
 </head>
 <body>
 <h1><a href="index.html" style="text-decoration:none;color:black;
@@ -11,6 +12,7 @@ AANICKFAN
 <ul>
 <li><a href="games.html">Games</a></li>
 <li><a href="music.html">Music</a></li>
+<li><a href="https://www.youtube.com/channel/UCBKG90nDQcBcao7w8K5FuXA" target="_blank">YouTube channel<img src="images/external.png"></img></a></li>
 </ul>
 
 </body>
