--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@ AANICKFAN
 <li><a href="https://www.youtube.com/channel/UCBKG90nDQcBcao7w8K5FuXA" target="_blank">YouTube channel<img src="images/external.png"></img></a></li>
 </ul>
 
+<img src="images/coa.png"></img>
+
 </body>
 </html>
