--- a/anvil.html
+++ b/anvil.html
@@ -6,14 +6,14 @@ AANICKFAN
 <link rel="icon" href="images/icon.png">
 
 <style>
-a{
+/*a{
 text-decoration:none;
 color:black;
-}
+}*/
 
-a:hover{
+/*a:hover{
 color: red;
-}
+}*/
 
 </style>
 
@@ -33,25 +33,25 @@ Tracks: 10
 
 <br><br>
 
-1 the best christmas instrumental out there<br><audio controls><source src="music/46.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="46.html">1 the best christmas instrumental out there<br><audio controls><source src="music/46.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-2 <a href="images/47.png" target="_blank">Lapis Trade</a><br><audio controls><source src="music/47.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="47.html">2 Lapis Trade</a><br><audio controls><source src="music/47.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-3 <a href="images/48.png" target="_blank">Yellow Desk</a><br><audio controls><source src="music/48.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="48.html">3 Yellow Desk</a><br><audio controls><source src="music/48.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-4 <a href="images/49.png" target="_blank">Incinerator</a><br><audio controls><source src="music/49.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="49.html">4 Incinerator</a><br><audio controls><source src="music/49.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-5 <a href="images/50.png" target="_blank">CAKE</a><br><audio controls><source src="music/50.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="50.html">5 CAKE</a><br><audio controls><source src="music/50.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-6 <a href="images/51.png" target="_blank">Chloroplast</a><br><audio controls><source src="music/51.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
+<a href="51.html">6 Chloroplast</a><br><audio controls><source src="music/51.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
 
-7 <a href="images/52.png" target="_blank">Systematic+</a><br><audio controls><source src="music/52.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
+<a href="52.html">7 Systematic+</a><br><audio controls><source src="music/52.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
 
-8 <a href="images/53.png" target="_blank">Barrel</a><br><audio controls><source src="music/53.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="53.html">8 Barrel</a><br><audio controls><source src="music/53.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-9 <a href="images/54.png" target="_blank">1134</a><br><audio controls><source src="music/54.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
+<a href="54.html">9 1134</a><br><audio controls><source src="music/54.m4a" type="audio/mp4">Your browser does not support the audio element.</audio><br>
 
-10 <a href="images/55.png" target="_blank">Renaissance_</a><br><audio controls><source src="music/55.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="55.html">10 Renaissance_</a><br><audio controls><source src="music/55.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
