--- a/hello_new.html
+++ b/hello_new.html
@@ -6,14 +6,6 @@ AANICKFAN
 <link rel="icon" href="images/icon.png">
 
 <style>
-a{
-text-decoration:none;
-color:black;
-}
-
-a:hover{
-color: red;
-}
 
 </style>
 
@@ -31,21 +23,21 @@ Tracks: 8
 
 <br><br>
 
-1 Maze of Yarad<br><audio controls><source src="music/56.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="56.html">1 Maze of Yarad</a><br><audio controls><source src="music/56.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-2 <a href="images/47.png" target="_blank">Ushkan Islands</a><br><audio controls><source src="music/57.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="57.html">2 Ushkan Islands</a><br><audio controls><source src="music/57.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-3 <a href="images/48.png" target="_blank">Folder</a><br><audio controls><source src="music/58.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="58.html">3 Folder</a><br><audio controls><source src="music/58.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-4 <a href="images/49.png" target="_blank">Subject Verb Object Verb</a><br><audio controls><source src="music/59.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="59.html">4 Subject Verb Object Verb</a><br><audio controls><source src="music/59.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-5 <a href="images/50.png" target="_blank">Mean Dilemma</a><br><audio controls><source src="music/60.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
+<a href="60.html">5 Mean Dilemma</a><br><audio controls><source src="music/60.wav" type="audio/wav">Your browser does not support the audio element.</audio><br>
 
-6 <a href="images/51.png" target="_blank">quadruple k</a><br><audio controls><source src="music/61.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="61.html">6 quadruple k</a><br><audio controls><source src="music/61.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-7 <a href="images/52.png" target="_blank">Thorn Patrol</a><br><audio controls><source src="music/62.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="62.html">7 Thorn Patrol</a><br><audio controls><source src="music/62.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-8 <a href="images/53.png" target="_blank">Inbox</a><br><audio controls><source src="music/63.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="63.html">8 Inbox</a><br><audio controls><source src="music/63.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
