--- a/music.html
+++ b/music.html
@@ -8,11 +8,16 @@ AANICKFAN
 <body>
 <h1><a href="index.html" style="text-decoration:none;color:black;
 ">AANickFan's Domain</a>: Music</h1>
+
+<h2>Collections</h2>
+
 <ul>
 <li><a href="anvil.html">Anvil</a></li>
 <li><a href="famitracker_45.html">FamiTracker 45</a></li>
 <li><a href="hello_new.html">Hello New</a></li>
 </ul>
+
+<a href="list_of_music.html"><h2>List of music</h2></a>
 
 </body>
 </html>
