--- a/hello_new.html
+++ b/hello_new.html
@@ -17,9 +17,11 @@ AANICKFAN
 <h2>Hello New</h2>
 <a href="images/hello_new.png" target="_blank"><img src="images/hello_new.png" width="150px" height="150px"></img></a>
 <br>
-Length: 14:24
+Length: 34:06
 <br>
-Tracks: 8
+Released: 2018-06-08
+<br>
+Tracks: 15
 
 <br><br>
 
@@ -38,6 +40,20 @@ Tracks: 8
 <a href="62.html">7 Thorn Patrol</a><br><audio controls><source src="music/62.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 <a href="63.html">8 Inbox</a><br><audio controls><source src="music/63.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="64.html">9 Anatolia</a><br><audio controls><source src="music/64.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="65.html">10 Dark</a><br><audio controls><source src="music/65.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="66.html">11 Newspaper - 1</a><br><audio controls><source src="music/66.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="67.html">12 Aether</a><br><audio controls><source src="music/67.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="68.html">13 Red</a><br><audio controls><source src="music/68.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="69.html">14 Seize</a><br><audio controls><source src="music/69.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="70.html">15 Ender Pearl</a><br><audio controls><source src="music/70.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
