--- a/list_of_music.html
+++ b/list_of_music.html
@@ -73,6 +73,17 @@ AANICKFAN
 <li><a href="61.html">quadruple k</a></li>
 <li><a href="62.html">Thorn Patrol</a></li>
 <li><a href="63.html">Inbox</a></li>
+<li><a href="64.html">Anatolia</a></li>
+<li><a href="65.html">Dark</a></li>
+<li><a href="66.html">Newspaper - 1</a></li>
+<li><a href="67.html">Aether</a></li>
+<li><a href="68.html">Red</a></li>
+<li><a href="69.html">Seize</a></li>
+<li><a href="70.html">Ender Pearl</a></li>
+<li><a href="71.html">Advertisement</a></li>
+<li><a href="72.html">Triskaidekaphobia</a></li>
+<li><a href="73.html">Phrygian Half Cadence Full Version</a></li>
+<li><a href="74.html">Great Wheat</a></li>
 </ol>
 
 </body>
