--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@ AANICKFAN
 <h1><a href="index.html" style="text-decoration:none;color:black;
 ">AANickFan's Domain</a></h1>
 <ul>
+<li><a href="coat_of_arms.html">Coat of arms</a></li>
 <li><a href="games.html">Games</a></li>
 <li><a href="music.html">Music</a></li>
 <li><a href="webcomic.html">Webcomic</a></li>
 <li><a href="https://www.youtube.com/channel/UCBKG90nDQcBcao7w8K5FuXA" target="_blank">YouTube channel<img src="images/external.png"></img></a></li>
 </ul>
 
-<img src="images/coa.png"></img>
+<img src="images/coa2.png"></img>
 
 </body>
 </html>
