coat of arms dash update

--- a/coat_of_arms.html
+++ b/coat_of_arms.html
@@ -12,10 +12,10 @@ AANICKFAN
 
 
 <img src="images/coa1.png" width="300px" height="289px"></img>
-<p>2018-05-05 — 2018-07-25</p>
+<p>2018-05-05 -- 2018-07-25</p>
 
 <img src="images/coa2.png" width="300px" height="289px"></img>
-<p>2018-07-25 — present</p> 
+<p>2018-07-25 -- present</p> 
 
 </body>
 </html>
