NU NU BYGGA FLERA HUS
Göteborg

--- a/coat_of_arms.html
+++ b/coat_of_arms.html
@@ -8,7 +8,7 @@ AANICKFAN
 </head>
 <body>
 <h1><a href="index.html" style="text-decoration:none;color:black;
-">AANickFan's Domain: Coat of arms</a></h1>
+">AANickFan's Domain</a>: Coat of arms</h1>
 
 
 <img src="images/coa1.png" width="300px" height="289px"></img>
