--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ AANICKFAN
 <h1><a href="index.html" style="text-decoration:none;color:black;
 ">AANickFan's Domain</a></h1>
 <ul>
+<li><a href="active_youtube_lete_plays.html">Active YouTube Let'e Plays</a></li>
 <li><a href="coat_of_arms.html">Coat of arms</a></li>
 <li><a href="games.html">Games</a></li>
 <li><a href="music.html">Music</a></li>
