--- a/coat_of_arms.html
+++ b/coat_of_arms.html
@@ -11,10 +11,10 @@ AANICKFAN
 ">AANickFan's Domain</a>: Coat of arms</h1>
 
 
-<img src="images/coa1.png" width="300px" height="289px"></img>
+<a href="images/coa1.png" target="_blank"><img src="images/coa1.png" width="300px" height="289px"></img></a>
 <p>2018-05-05 -- 2018-07-25</p>
 
-<img src="images/coa2.png" width="300px" height="289px"></img>
+<a href="images/coa2.png" target="_blank"><img src="images/coa2.png" width="300px" height="289px"></img></a>
 <p>2018-07-25 -- present</p> 
 
 </body>
