--- a/webcomic.html
+++ b/webcomic.html
@@ -14,5 +14,11 @@ I have made a webcomic. Its name is <b>High Quality Binoculars</b>.
 <br><br>
 Click <a href="webcomic/1.html">here</a> to start.
 
+<h2>Updates</h2>
+
+<p><b>2018-08-02:</b> 81 pages</p>
+
+<p><b>2018-07-22:</b> 71 pages</p>
+
 </body>
 </html>
