--- a/webcomic/82.html
+++ b/webcomic/82.html
@@ -9,18 +9,19 @@ AANICKFAN
 
 <h1><a href="../index.html" style="text-decoration:none;color:black;">AANickFan's Domain: Webcomic</a></h1>
 
-<img src="72.png"></img>
+<!--<img src="82.png"></img>-->
+There are no more pages.
 
 <br>
 
 
 <div style="font-size:70px;">
 
-<a href="71.html"><</a>
+<a href="81.html"><</a>
 
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
-<a href="73.html">></a>
+<a href="82.html">></a>
 
 </div>
 
