--- a/active_youtube_lete_plays.html
+++ b/active_youtube_lete_plays.html
@@ -8,13 +8,11 @@ AANICKFAN
 </head>
 <body>
 <h1><a href="index.html" style="text-decoration:none;color:black;
-">AANickFan's Domain</a>: Active YouTube Let'e Plays</h1>
+">AANickFan's Domain</a>: Active YouTube Let'e Play(s)</h1>
 
 <ul>
 
 <li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFQGCDCX58qshb-u_mZzFiWJ" target="_blank">Minecraft Hardcore</a><img src="images/external.png"></img></li>
-
-<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFQcFDznOJP6Neq_5EV67Up8" target="_blank">Super Mario Bros. 2</a><img src="images/external.png"></img></li>
 
 </ul>
 
