--- a/hello_new_2.html
+++ b/hello_new_2.html
@@ -31,5 +31,19 @@ Tracks: 4
 
 <a href="74.html">4 Great Wheat</a><br><audio controls><source src="music/74.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="75.html">5 123fendas</a><br><audio controls><source src="music/75.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="76.html">6 Yellow Cube ft. StovelJacob</a><br><audio controls><source src="music/76.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="77.html">7 Augmentation And Diminution Of Two Subjects I Forgot To Submit It To The 8-Bit Music Theory Discord</a><br><audio controls><source src="music/77.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="78.html">8 Epic Locrian</a><br><audio controls><source src="music/78.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="79.html">9 GRASS</a><br><audio controls><source src="music/79.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="80.html">10 Norfair</a><br><audio controls><source src="music/80.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="81.html">11 Salt Density</a><br><audio controls><source src="music/81.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
