--- a/list_of_music.html
+++ b/list_of_music.html
@@ -84,6 +84,13 @@ AANICKFAN
 <li><a href="72.html">Triskaidekaphobia</a></li>
 <li><a href="73.html">Phrygian Half Cadence Full Version</a></li>
 <li><a href="74.html">Great Wheat</a></li>
+<li><a href="75.html">123fendas</a></li>
+<li><a href="76.html">Yellow Cube ft. StovelJacob</a></li>
+<li><a href="77.html">Augmentation And Diminution Of Two Subjects I Forgot To Submit It To The 8-Bit Music Theory Discord</a></li>
+<li><a href="78.html">Epic Locrian</a></li>
+<li><a href="79.html">GRASS</a></li>
+<li><a href="80.html">Norfair</a></li>
+<li><a href="81.html">Salt Density</a></li>
 </ol>
 
 </body>
