--- a/hello_new_2.html
+++ b/hello_new_2.html
@@ -45,5 +45,7 @@ Tracks: 4
 
 <a href="81.html">11 Salt Density</a><br><audio controls><source src="music/81.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="82.html">12 80ap is magic</a><br><audio controls><source src="music/82.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
