--- a/list_of_music.html
+++ b/list_of_music.html
@@ -91,6 +91,7 @@ AANICKFAN
 <li><a href="79.html">GRASS</a></li>
 <li><a href="80.html">Norfair</a></li>
 <li><a href="81.html">Salt Density</a></li>
+<li><a href="82.html">80ap is magic</a></li>
 </ol>
 
 </body>
