--- a/hello_new_2.html
+++ b/hello_new_2.html
@@ -17,9 +17,9 @@ AANICKFAN
 <h2>Hello New 2</h2>
 <a href="images/hello_new_2.png" target="_blank"><img src="images/hello_new_2.png" width="150px" height="150px"></img></a>
 <br>
-Length: 9:10
+Length: 35:49
 <br>
-Tracks: 4
+Tracks: 13
 
 <br><br>
 
@@ -46,6 +46,8 @@ Tracks: 4
 <a href="81.html">11 Salt Density</a><br><audio controls><source src="music/81.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 <a href="82.html">12 80ap is magic</a><br><audio controls><source src="music/82.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="83.html">13 pennan</a><br><audio controls><source src="music/83.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
