--- a/list_of_music.html
+++ b/list_of_music.html
@@ -92,6 +92,7 @@ AANICKFAN
 <li><a href="80.html">Norfair</a></li>
 <li><a href="81.html">Salt Density</a></li>
 <li><a href="82.html">80ap is magic</a></li>
+<li><a href="83.html">pennan</a></li>
 </ol>
 
 </body>
