--- a/active_youtube_lete_plays.html
+++ b/active_youtube_lete_plays.html
@@ -14,6 +14,8 @@ AANICKFAN
 
 <li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFQGCDCX58qshb-u_mZzFiWJ" target="_blank">Minecraft Hardcore</a><img src="images/external.png"></img></li>
 
+<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFT1MudwDsP9Ya173CdN2M_3" target="_blank">Super Mario Bros.: The Lost Levels</a><img src="images/external.png"></img></li>
+
 </ul>
 
 </body>
