--- a/hello_new_2.html
+++ b/hello_new_2.html
@@ -17,9 +17,9 @@ AANICKFAN
 <h2>Hello New 2</h2>
 <a href="images/hello_new_2.png" target="_blank"><img src="images/hello_new_2.png" width="150px" height="150px"></img></a>
 <br>
-Length: 35:49
+Length: 38:34
 <br>
-Tracks: 13
+Tracks: 14
 
 <br><br>
 
@@ -48,6 +48,8 @@ Tracks: 13
 <a href="82.html">12 80ap is magic</a><br><audio controls><source src="music/82.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 <a href="83.html">13 pennan</a><br><audio controls><source src="music/83.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="84.html">14 tvillingmannen</a><br><audio controls><source src="music/84.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
