--- a/active_youtube_lete_plays.html
+++ b/active_youtube_lete_plays.html
@@ -12,7 +12,11 @@ AANICKFAN
 
 <ul>
 
+<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFQkNEchAfbMQQr-infBl67_" target="_blank">Mega Man 2: Atari De-Make</a><img src="images/external.png"></img></li>
+
 <li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFQGCDCX58qshb-u_mZzFiWJ" target="_blank">Minecraft Hardcore</a><img src="images/external.png"></img></li>
+
+<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFTt5RKKmQeJ-lA68cn23l_0" target="_blank">Pokémon Glazed</a><img src="images/external.png"></img></li>
 
 <li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFT1MudwDsP9Ya173CdN2M_3" target="_blank">Super Mario Bros.: The Lost Levels</a><img src="images/external.png"></img></li>
 
