--- a/hello_new_2.html
+++ b/hello_new_2.html
@@ -17,9 +17,9 @@ AANICKFAN
 <h2>Hello New 2</h2>
 <a href="images/hello_new_2.png" target="_blank"><img src="images/hello_new_2.png" width="150px" height="150px"></img></a>
 <br>
-Length: 38:34
+Length: 44:01
 <br>
-Tracks: 14
+Tracks: 16
 
 <br><br>
 
@@ -50,6 +50,10 @@ Tracks: 14
 <a href="83.html">13 pennan</a><br><audio controls><source src="music/83.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 <a href="84.html">14 tvillingmannen</a><br><audio controls><source src="music/84.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="85.html">15 Heave-Ho</a><br><audio controls><source src="music/85.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="86.html">16 Poland</a><br><audio controls><source src="music/86.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
