--- a/list_of_music.html
+++ b/list_of_music.html
@@ -94,6 +94,8 @@ AANICKFAN
 <li><a href="82.html">80ap is magic</a></li>
 <li><a href="83.html">pennan</a></li>
 <li><a href="84.html">tvillingmannen</a></li>
+<li><a href="85.html">Heave-Ho</a></li>
+<li><a href="86.html">Poland</a></li>
 </ol>
 
 </body>
