87 added, minecraft hardcore removed
87 added, minecraft hardcore removed

--- a/active_youtube_lete_plays.html
+++ b/active_youtube_lete_plays.html
@@ -12,9 +12,7 @@ AANICKFAN
 
 <ul>
 
-<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFQkNEchAfbMQQr-infBl67_" target="_blank">Mega Man 2: Atari De-Make</a><img src="images/external.png"></img></li>
-
-<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFQGCDCX58qshb-u_mZzFiWJ" target="_blank">Minecraft Hardcore</a><img src="images/external.png"></img></li>
+<!--<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFQGCDCX58qshb-u_mZzFiWJ" target="_blank">Minecraft Hardcore</a><img src="images/external.png"></img></li>-->
 
 <li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFTt5RKKmQeJ-lA68cn23l_0" target="_blank">Pokémon Glazed</a><img src="images/external.png"></img></li>
 
