--- a/hello_new_2.html
+++ b/hello_new_2.html
@@ -17,9 +17,11 @@ AANICKFAN
 <h2>Hello New 2</h2>
 <a href="images/hello_new_2.png" target="_blank"><img src="images/hello_new_2.png" width="150px" height="150px"></img></a>
 <br>
-Length: 44:01
+Length: 47:11
 <br>
-Tracks: 16
+Released: 2018-09-09
+<br>
+Tracks: 17
 
 <br><br>
 
@@ -54,6 +56,8 @@ Tracks: 16
 <a href="85.html">15 Heave-Ho</a><br><audio controls><source src="music/85.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 <a href="86.html">16 Poland</a><br><audio controls><source src="music/86.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="87.html">17 Blaze Rod</a><br><audio controls><source src="music/87.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
