--- a/list_of_music.html
+++ b/list_of_music.html
@@ -96,6 +96,7 @@ AANICKFAN
 <li><a href="84.html">tvillingmannen</a></li>
 <li><a href="85.html">Heave-Ho</a></li>
 <li><a href="86.html">Poland</a></li>
+<li><a href="87.html">Blaze Rod</a></li>
 </ol>
 
 </body>
