--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ AANICKFAN
 ">AANickFan's Domain</a></h1>
 <ul>
 <li><a href="active_youtube_lete_plays.html">Active YouTube Let'e Play(s)</a></li>
+<li><a href="blogg.html">Blog</a></li>
 <li><a href="coat_of_arms.html">Coat of arms</a></li>
 <li><a href="games.html">Games</a></li>
 <li><a href="music.html">Music</a></li>
