sweganda and new super amrio rbros.
sweganda and new super amrio rbros.

--- a/active_youtube_lete_plays.html
+++ b/active_youtube_lete_plays.html
@@ -14,9 +14,11 @@ AANICKFAN
 
 <!--<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFQGCDCX58qshb-u_mZzFiWJ" target="_blank">Minecraft Hardcore</a><img src="images/external.png"></img></li>-->
 
-<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFTt5RKKmQeJ-lA68cn23l_0" target="_blank">Pokémon Glazed</a><img src="images/external.png"></img></li>
+<!--<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFTt5RKKmQeJ-lA68cn23l_0" target="_blank">Pokémon Glazed</a><img src="images/external.png"></img></li>
 
-<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFT1MudwDsP9Ya173CdN2M_3" target="_blank">Super Mario Bros.: The Lost Levels</a><img src="images/external.png"></img></li>
+<li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFT1MudwDsP9Ya173CdN2M_3" target="_blank">Super Mario Bros.: The Lost Levels</a><img src="images/external.png"></img></li>-->
+
+<li>New Super Mario Bros.</li>
 
 </ul>
 
