--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ AANICKFAN
 </ul>
 
 <img src="images/coa2.png"></img>
+<br>
+<img src="images/sweganda.png"></img>
+<br>
+Sweganda
 
 </body>
 </html>
