blanka fungdomo 1-8, blog update, and flags
blanka fungdomo 1-8, blog update, and flags

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ AANICKFAN
 <li><a href="active_youtube_lete_plays.html">Active YouTube Let'e Play(s)</a></li>
 <li><a href="blogg.html">Blog</a></li>
 <li><a href="coat_of_arms.html">Coat of arms</a></li>
+<li><a href="flags.html">Flags</a></li>
 <li><a href="games.html">Games</a></li>
 <li><a href="music.html">Music</a></li>
 <li><a href="webcomic.html">Webcomic</a></li>
@@ -21,9 +22,6 @@ AANICKFAN
 
 <img src="images/coa2.png"></img>
 <br>
-<img src="images/sweganda.png"></img>
-<br>
-Sweganda
 
 </body>
 </html>
