--- a/music.html
+++ b/music.html
@@ -13,6 +13,7 @@ AANICKFAN
 
 <ul>
 <li><a href="anvil.html">Anvil</a></li>
+<li><a href="blanka_fungdomo.html">Blanka fungdomo</a></li>
 <li><a href="famitracker_45.html">FamiTracker 45</a></li>
 <li><a href="hello_new.html">Hello New</a></li>
 <li><a href="hello_new_2.html">Hello New 2</a></li>
