--- a/blanka_fungdomo.html
+++ b/blanka_fungdomo.html
@@ -41,5 +41,21 @@ Tracks:
 
 <a href="95.html">8 Bane of Arthropods</a><br><audio controls><source src="music/95.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="96.html">9 VARIA</a><br><audio controls><source src="music/96.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="97.html">10 Desert M</a><br><audio controls><source src="music/97.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="98.html">11 KFC 7864</a><br><audio controls><source src="music/98.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="99.html">12 KFC 7913</a><br><audio controls><source src="music/99.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="100.html">13 ßßß_ß</a><br><audio controls><source src="music/100.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="101.html">14 Pecten novaezelandiae</a><br><audio controls><source src="music/101.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="102.html">15 pōmum grānātum</a><br><audio controls><source src="music/102.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="103.html">16 V=m÷ρ</a><br><audio controls><source src="music/103.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
