--- a/blogg.html
+++ b/blogg.html
@@ -10,6 +10,9 @@ AANICKFAN
 <h1><a href="index.html" style="text-decoration:none;color:black;
 ">AANickFan's Domain</a>: Blogg</h1>
 
+<h2><a href="blogg/2018-12-22.html">2018-12-22</a></h2>
+<p>iawidoawdimawdim a sm,xzm,czmx,czmxc ,mzxcmzxncnzmxcnzc oioiAJIWDIAWDIOAW DNMWADOMIAWIOD AWIMDKASNCKALQOQOQPQPQPQPPQPPQQPpQPQ PQPQPQQPPQQQQQQQQQQQQQQQQQQQQQQQQQ</p>
+
 <h2><a href="blogg/2018-10-28.html">2018-10-28</a></h2>
 <p>iJwdikwdiaksdoKSDJMokwnmoNSDKLANWIncnMNXMVNALKSXXXXXXXXXXXxxxxxxx[x][x][x][x][x][x][x][x][x][x][x][x][x] aux [χ][χ][χ][χ][χ][χ] mi ne scias</p>
 
