--- a/active_youtube_lete_plays.html
+++ b/active_youtube_lete_plays.html
@@ -18,7 +18,7 @@ AANICKFAN
 
 <li><a href="https://www.youtube.com/playlist?list=PLRqfiwGINxFT1MudwDsP9Ya173CdN2M_3" target="_blank">Super Mario Bros.: The Lost Levels</a><img src="images/external.png"></img></li>-->
 
-<li>New Super Mario Bros.</li>
+<li>Super Mario Galaxy</li>
 
 </ul>
 
