--- a/list_of_music.html
+++ b/list_of_music.html
@@ -97,6 +97,23 @@ AANICKFAN
 <li><a href="85.html">Heave-Ho</a></li>
 <li><a href="86.html">Poland</a></li>
 <li><a href="87.html">Blaze Rod</a></li>
+<li><a href="88.html">Final Fantasy Magic Spell 'Dia'</a></li>
+<li><a href="89.html">Silk Touch</a></li>
+<li><a href="90.html">Crash Bomber</a></li>
+<li><a href="91.html">Diorite</a></li>
+<li><a href="92.html">La kvin steloj</a></li>
+<li><a href="93.html">Fortune III</a></li>
+<li><a href="94.html">Smite</a></li>
+<li><a href="95.html">Bane of Arthropods</a></li>
+<li><a href="96.html">VARIA</a></li>
+<li><a href="97.html">Desert M</a></li>
+<li><a href="98.html">KFC 7864</a></li>
+<li><a href="99.html">KFC 7913</a></li>
+<li><a href="100.html">ßßß_ß</a></li>
+<li><a href="101.html">Pecten novaezelandiae</a></li>
+<li><a href="102.html">pōmum grānātum</a></li>
+<li><a href="103.html">V=m÷ρ</a></li>
+
 </ol>
 
 </body>
