--- a/blanka_fungdomo.html
+++ b/blanka_fungdomo.html
@@ -17,11 +17,11 @@ AANICKFAN
 <h2>Blanka fungdomo</h2>
 <a href="images/blanka_fungdomo.png" target="_blank"><img src="images/blanka_fungdomo.png" width="150px" height="150px"></img></a>
 <br>
-Length: 
+Length: 48:44
 <br>
-Released: 
+Released: 2018-12-31
 <br>
-Tracks: 
+Tracks: 17
 
 <br><br>
 
@@ -56,6 +56,8 @@ Tracks:
 <a href="102.html">15 pōmum grānātum</a><br><audio controls><source src="music/102.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 <a href="103.html">16 V=m÷ρ</a><br><audio controls><source src="music/103.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="104.html">17 Mycelium</a><br><audio controls><source src="music/104.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
