--- a/list_of_music.html
+++ b/list_of_music.html
@@ -114,6 +114,7 @@ AANICKFAN
 <li><a href="102.html">pōmum grānātum</a></li>
 <li><a href="103.html">V=m÷ρ</a></li>
 <li><a href="104.html">Mycelium</a></li>
+<li><a href="105.html">Ghast Tear<a></li>
 
 </ol>
 
