--- a/music.html
+++ b/music.html
@@ -12,11 +12,12 @@ AANICKFAN
 <h2>Collections</h2>
 
 <ul>
-<li><a href="anvil.html">Anvil</a></li>
-<li><a href="blanka_fungdomo.html">Blanka fungdomo</a></li>
 <li><a href="famitracker_45.html">FamiTracker 45</a></li>
+<li><a href="anvil.html">Anvil</a></li>
 <li><a href="hello_new.html">Hello New</a></li>
 <li><a href="hello_new_2.html">Hello New 2</a></li>
+<li><a href="blanka_fungdomo.html">Blanka fungdomo</a></li>
+<li><a href="temporary_name.html">Temporary Name</a></li>
 </ul>
 
 <a href="list_of_music.html"><h2>List of music</h2></a>
