--- a/list_of_music.html
+++ b/list_of_music.html
@@ -115,6 +115,7 @@ AANICKFAN
 <li><a href="103.html">V=m÷ρ</a></li>
 <li><a href="104.html">Mycelium</a></li>
 <li><a href="105.html">Ghast Tear<a></li>
+<li><a href="106.html">Chain Chomplets Unchained<a></li>
 
 </ol>
 
