--- a/temporary_name.html
+++ b/temporary_name.html
@@ -18,5 +18,7 @@ AANICKFAN
 
 <a href="105.html">1 Ghast Tear</a><br><audio controls><source src="music/105.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="106.html">2 Chain Chomplets Unchained</a><br><audio controls><source src="music/106.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
