--- a/list_of_music.html
+++ b/list_of_music.html
@@ -116,7 +116,7 @@ AANICKFAN
 <li><a href="104.html">Mycelium</a></li>
 <li><a href="105.html">Ghast Tear<a></li>
 <li><a href="106.html">Chain Chomplets Unchained<a></li>
-
+<li><a href="107.html">Il Piantissimo's Crazy Climb<a></li>
 </ol>
 
 </body>
