--- a/temporary_name.html
+++ b/temporary_name.html
@@ -20,5 +20,6 @@ AANICKFAN
 
 <a href="106.html">2 Chain Chomplets Unchained</a><br><audio controls><source src="music/106.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="106.html">3 Il Piantissimo's Crazy Climb</a><br><audio controls><source src="music/107.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 </body>
 </html>
