Double Dagger och 108
Double Dagger och 108

--- a/107.html
+++ b/107.html
@@ -12,7 +12,11 @@ AANICKFAN
 
 <h2>Il Piantissimo's Crazy Climb</h2>
 
-Part of: <a href="temporary_name.html">Temporary Name</a>
+<a href="images/double_dagger.png" target="_blank"><img src="images/double_dagger.png" width="150px" height="150px"></img></a>
+
+<br>
+
+Part of: <a href="double_dagger.html">Double Dagger</a>
 
 <br>
 
