--- a/108.html
+++ b/108.html
@@ -8,9 +8,9 @@ AANICKFAN
 <body>
 
 <h1><a href="index.html" style="text-decoration:none;color:black;
-">AANickFan's Domain</a>: Chain Chomplets Unchained</h1>
+">AANickFan's Domain</a>: The Goopy Inferno</h1>
 
-<h2>Chain Chomplets Unchained</h2>
+<h2>The Goopy Inferno</h2>
 
 <a href="images/double_dagger.png" target="_blank"><img src="images/double_dagger.png" width="150px" height="150px"></img></a>
 
@@ -20,11 +20,11 @@ Part of: <a href="double_dagger.html">Double Dagger</a>
 
 <br>
 
-Released: 2019-01-14
+Released: 2019-01-27
 
 <br>
 
-<audio controls><source src="music/106.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<audio controls><source src="music/108.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
