--- a/music.html
+++ b/music.html
@@ -17,7 +17,7 @@ AANICKFAN
 <li><a href="hello_new.html">Hello New</a></li>
 <li><a href="hello_new_2.html">Hello New 2</a></li>
 <li><a href="blanka_fungdomo.html">Blanka fungdomo</a></li>
-<li><a href="temporary_name.html">Temporary Name</a></li>
+<li><a href="double_dagger.html">Double Dagger</a></li>
 </ul>
 
 <a href="list_of_music.html"><h2>List of music</h2></a>
