--- a/list_of_music.html
+++ b/list_of_music.html
@@ -117,6 +117,7 @@ AANICKFAN
 <li><a href="105.html">Ghast Tear<a></li>
 <li><a href="106.html">Chain Chomplets Unchained<a></li>
 <li><a href="107.html">Il Piantissimo's Crazy Climb<a></li>
+<li><a href="108.html">The Goopy Inferno<a></li>
 </ol>
 
 </body>
