give credit where credit is due
give credit where credit is due

--- a/70.html
+++ b/70.html
@@ -24,6 +24,10 @@ Released: 2018-06-07
 
 <br>
 
+Recording of a voiceless labiodental affricate provided by Adamsa123. en.wikipedia.org/wiki/File:Voicel…al_affricate.ogg
+
+<br>
+
 <audio controls><source src="music/70.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
