--- a/list_of_music.html
+++ b/list_of_music.html
@@ -118,6 +118,7 @@ AANICKFAN
 <li><a href="106.html">Chain Chomplets Unchained<a></li>
 <li><a href="107.html">Il Piantissimo's Crazy Climb<a></li>
 <li><a href="108.html">The Goopy Inferno<a></li>
+<li><a href="109.html">Chain Chomp's Bath<a></li>
 </ol>
 
 </body>
