--- a/double_dagger.html
+++ b/double_dagger.html
@@ -30,5 +30,7 @@ AANICKFAN
 
 <a href="108.html">4 The Goopy Inferno</a><br><audio controls><source src="music/108.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="109.html">5 Chain Chomp's Bath</a><br><audio controls><source src="music/109.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
