--- a/list_of_music.html
+++ b/list_of_music.html
@@ -119,6 +119,8 @@ AANICKFAN
 <li><a href="107.html">Il Piantissimo's Crazy Climb<a></li>
 <li><a href="108.html">The Goopy Inferno<a></li>
 <li><a href="109.html">Chain Chomp's Bath<a></li>
+<li><a href="110.html">Secret of the Village Underside<a></li>
+<li><a href="111.html">Piantas in Need<a></li>
 </ol>
 
 </body>
