--- a/double_dagger.html
+++ b/double_dagger.html
@@ -32,5 +32,9 @@ AANICKFAN
 
 <a href="109.html">5 Chain Chomp's Bath</a><br><audio controls><source src="music/109.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="110.html">6 Secret of the Village Underside</a><br><audio controls><source src="music/110.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="111.html">7 Piantas in Need</a><br><audio controls><source src="music/111.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
