--- a/double_dagger.html
+++ b/double_dagger.html
@@ -36,5 +36,7 @@ AANICKFAN
 
 <a href="111.html">7 Piantas in Need</a><br><audio controls><source src="music/111.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="112.html">8 Shadow Mario Runs Wild</a><br><audio controls><source src="music/112.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
