--- a/list_of_music.html
+++ b/list_of_music.html
@@ -121,6 +121,7 @@ AANICKFAN
 <li><a href="109.html">Chain Chomp's Bath<a></li>
 <li><a href="110.html">Secret of the Village Underside<a></li>
 <li><a href="111.html">Piantas in Need<a></li>
+<li><a href="112.html">Shadow Mario Runs Wild<a></li>
 </ol>
 
 </body>
