--- a/list_of_music.html
+++ b/list_of_music.html
@@ -122,6 +122,7 @@ AANICKFAN
 <li><a href="110.html">Secret of the Village Underside<a></li>
 <li><a href="111.html">Piantas in Need<a></li>
 <li><a href="112.html">Shadow Mario Runs Wild<a></li>
+<li><a href="113.html">Fluff Festival Coin Hunt<a></li>
 </ol>
 
 </body>
