--- a/double_dagger.html
+++ b/double_dagger.html
@@ -38,5 +38,7 @@ AANICKFAN
 
 <a href="112.html">8 Shadow Mario Runs Wild</a><br><audio controls><source src="music/112.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="113.html">9 Fluff Festival Coin Hunt</a><br><audio controls><source src="music/113.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
