--- a/double_dagger.html
+++ b/double_dagger.html
@@ -40,5 +40,7 @@ AANICKFAN
 
 <a href="113.html">9 Fluff Festival Coin Hunt</a><br><audio controls><source src="music/113.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="113.html">10 Red Coin Chucksters</a><br><audio controls><source src="music/113.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
