--- a/list_of_music.html
+++ b/list_of_music.html
@@ -123,6 +123,7 @@ AANICKFAN
 <li><a href="111.html">Piantas in Need<a></li>
 <li><a href="112.html">Shadow Mario Runs Wild<a></li>
 <li><a href="113.html">Fluff Festival Coin Hunt<a></li>
+<li><a href="114.html">Red Coin Chucksters<a></li>
 </ol>
 
 </body>
