--- a/list_of_music.html
+++ b/list_of_music.html
@@ -124,6 +124,7 @@ AANICKFAN
 <li><a href="112.html">Shadow Mario Runs Wild<a></li>
 <li><a href="113.html">Fluff Festival Coin Hunt<a></li>
 <li><a href="114.html">Red Coin Chucksters<a></li>
+<li><a href="115.html">Soak the Sun<a></li>
 </ol>
 
 </body>
