--- a/double_dagger.html
+++ b/double_dagger.html
@@ -40,7 +40,9 @@ AANICKFAN
 
 <a href="113.html">9 Fluff Festival Coin Hunt</a><br><audio controls><source src="music/113.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
-<a href="114.html">10 Red Coin Chucksters</a><br><audio controls><source src="music/113.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+<a href="114.html">10 Red Coin Chucksters</a><br><audio controls><source src="music/114.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
+<a href="115.html">11 Soak the Sun</a><br><audio controls><source src="music/115.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
 </body>
 </html>
