--- a/list_of_music.html
+++ b/list_of_music.html
@@ -125,6 +125,7 @@ AANICKFAN
 <li><a href="113.html">Fluff Festival Coin Hunt<a></li>
 <li><a href="114.html">Red Coin Chucksters<a></li>
 <li><a href="115.html">Soak the Sun<a></li>
+<li><a href="116.html">Los Pingüinos<a></li>
 </ol>
 
 </body>
