--- a/list_of_music.html
+++ b/list_of_music.html
@@ -127,6 +127,7 @@ AANICKFAN
 <li><a href="115.html">Soak the Sun<a></li>
 <li><a href="116.html">Los Pingüinos<a></li>
 <li><a href="117.html">Ascend<a></li>
+<li><a href="118.html">Copyright<a></li>
 </ol>
 
 </body>
