--- a/double_dagger.html
+++ b/double_dagger.html
@@ -48,5 +48,7 @@ AANICKFAN
 
 <a href="117.html">13 Ascend</a><br><audio controls><source src="music/117.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
 
+<a href="118.html">14 Copyright</a><br><audio controls><source src="music/118.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio><br>
+
 </body>
 </html>
